<resources>
    <string name="app_name">RUPizzeriaAndroid</string>
    <string name="ru_pizzeria">RU Pizzeria</string>
    <string name="menu">Menu</string>
    <string name="order">Order</string>
    <string name="click_on_the_menu_button_to_see_the_delicious_options_we_offer">Click on the menu button to see the delicious options we offer!</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="close">Close</string>
    <string name="order_page">Order Page</string>
    <string name="size">Size:</string>
    <string name="small">Small</string>
    <string name="medium">Medium</string>
    <string name="large">Large</string>
    <string name="pizza_price">Pizza price:</string>
    <string name="add_to_order">Add to Order</string>
    <string name="toppings">Toppings:</string>
    <string name="toppings2">Toppings</string>
    <string name="left"><![CDATA[<<]]></string>
    <string name="right"><![CDATA[>>]]></string>
    <string name="sausage">Sausage</string>
    <string name="pepperoni">Pepperoni</string>
    <string name="greenpepper">Greenpepper</string>
    <string name="onion">Onion</string>
    <string name="mushroom">Mushroom</string>
    <string name="bbq_chicken">BBQ Chicken</string>
    <string name="provolone">Provolone</string>
    <string name="cheddar">Cheddar</string>
    <string name="beef">Beef</string>
    <string name="ham">Ham</string>
    <string name="broccoli">Broccoli</string>
    <string name="spinach">Spinach</string>
    <string name="jalapeno">Jalapeno</string>
    <string name="mycart">My Cart</string>
    <string name="cancel">Cancel</string>
    <string name="sales_tax">Sales Tax:</string>
    <string name="order_total">Order Total:</string>
    <string name="subtotal">Subtotal:</string>
    <string name="remove_pizza">Remove Pizza</string>
    <string name="clear_order">Clear Order</string>
    <string name="place_order">Place Order</string>
    <string name="orders_placed">Orders Placed</string>
    <string name="crust_type">Crust type:</string>
    <string name="order_number">Order Number:</string>
    <string name="number_of_pizzas">Number of Pizzas:</string>
    <string name="ordernum">Order #</string>
    <string name="numpizzas"># of Pizzas</string>
    <string name="total">Total ($)</string>
    <string name="order_details">Order Details</string>
    <string name="output_area">Output Area</string>
    <string name="browse">Browse</string>


    <string-array name="dropdown_items">
        <item>Chicago Pizza</item>
        <item>New York Pizza</item>
    </string-array>

</resources>