<?xml version="1.0" encoding="utf-8"?>
<TableLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:stretchColumns="*"
    android:padding="8dp"
    android:background="@color/default_color">

<TableRow>

    <ImageView
        android:id="@+id/orderImage"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_marginEnd="8dp" />

    <TextView
        android:id="@+id/orderNumberText"
        android:layout_width="101dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:gravity="center"
        android:padding="4dp"
        android:text="@string/ordernum"
        android:textSize="14sp" />

    <TextView
        android:id="@+id/pizzaCountText"
        android:layout_width="104dp"
        android:layout_height="129dp"
        android:layout_weight="1"
        android:gravity="center"
        android:padding="4dp"
        android:text="@string/numpizzas"
        android:textSize="14sp" />

    <TextView
        android:id="@+id/totalAmountText"
        android:layout_width="82dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:gravity="center"
        android:padding="4dp"
        android:text="@string/total"
        android:textSize="14sp" />

    <TextView
        android:id="@+id/orderDetailsText"
        android:layout_width="171dp"
        android:layout_height="129dp"
        android:layout_weight="1"
        android:gravity="center"
        android:padding="4dp"
        android:text="@string/order_details"
        android:textSize="14sp" />
</TableRow>
    </TableLayout>
